helm-charts/argocd/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: university-management
  labels:
    name: university-management
    app.kubernetes.io/name: university-management-platform
    app.kubernetes.io/instance: university-management
